@@ -16988,7 +16988,7 @@ SCIP_Bool SCIPisReoptEnabled(
 }
 
 /** returns the stored solutions corresponding to a given run */
-SCIP_RETCODE SCIPgetReopSolsRun(
+SCIP_RETCODE SCIPgetReoptSolsRun(
    SCIP*                 scip,               /**< SCIP data structure */
    int                   run,                /**< number of the run */
    SCIP_SOL**            sols,               /**< array to store solutions */
