@@ -6982,7 +6982,7 @@ SCIP_Bool SCIPisReoptEnabled(
 
 /** returns the stored solutions corresponding to a given run */
 EXTERN
-SCIP_RETCODE SCIPgetReopSolsRun(
+SCIP_RETCODE SCIPgetReoptSolsRun(
    SCIP*                 scip,               /**< SCIP data structue */
    int                   run,                /**< number of the run */
    SCIP_SOL**            sols,               /**< array to store solutions */
